Start MVVM using Databinding: Rename MainAdapterViewModel to MovieAdapterViewModel

--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.pengdst.movielist.presentation.mvvm.MainAdapterViewModel" />
+            type="com.pengdst.movielist.presentation.mvvm.MovieAdapterViewModel" />
     </data>
     
     <androidx.cardview.widget.CardView
