--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".presentation.MainActivity">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.pengdst.movielist.presentation.mvvm.MainViewModel" />
-    </data>
-
-    <FrameLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.MainActivity">
+        android:clickable="true"
+        android:focusable="true"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_movies"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"/>
+    <ProgressBar
+        android:id="@+id/pg_movie"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:indeterminate="true"
+        android:padding="60dp"/>
 
-        <ProgressBar
-            android:id="@+id/pg_movie"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="@{viewModel.progressBarVisibility}"
-            android:scrollbars="vertical"
-            style="@style/Widget.AppCompat.ProgressBar"
-            android:indeterminate="true"
-            android:padding="60dp"/>
-
-    </FrameLayout>
-
-</layout>
+</FrameLayout>
